<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B03A0E"
    android:gravity="center"
    android:orientation="vertical"

    android:padding="50dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/arbutus"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/lbl_consultas"
                android:textColor="#F0E6E6"
                android:textSize="30dp"></TextView>

            <EditText
                android:id="@+id/caja_Num_Control_Consultas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/txt_busqueda"
                android:padding="10dp"></EditText>

            <Spinner
                android:id="@+id/Carreras"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:background="#fff" />

            <Spinner
                android:id="@+id/opciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff" />

            <Button
                android:id="@+id/btn_consultar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#FFF"
                android:onClick="consultarAlumnos"
                android:text="@string/btn_consultas_todo"
                android:textColor="#000"></Button>

            <Button
                android:id="@+id/btn_consultar_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#FFF"
                android:onClick="consultarAlumnos"
                android:text="@string/btn_consultas"
                android:textColor="#000"></Button>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ListView
                        android:id="@+id/tabla"
                        android:layout_width="match_parent"
                        android:layout_height="377dp"
                        android:layout_margin="5dp"
                        android:background="#fff" />

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>