<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E21B0"

    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="163dp"
        android:foregroundGravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="26dp"
        tools:srcCompat="@tools:sample/avatars[11]" />

    <Button
        android:id="@+id/btn_altas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="85dp"
        android:background="#89B00E"
        android:onClick="abrirActivities"
        android:text="@string/btn_altas"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/btn_bajas_cambios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/btn_bajas_cambios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="30dp"
        android:background="#89B00E"
        android:onClick="abrirActivities"
        android:text="@string/btn_bajas_cambios"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/btn_consultas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_altas"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/btn_consultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="220dp"
        android:background="#89B00E"
        android:onClick="abrirActivities"
        android:text="@string/btn_consultas"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bajas_cambios"
        tools:ignore="MissingConstraints"></Button>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="135dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text="@string/lbl_menu"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>